--- a/ForLib1/build.gradle
+++ b/ForLib1/build.gradle
@@ -14,11 +14,11 @@ repositories {
 
 configurations {
     extraLibs { transitive = false }
+    implementation.extendsFrom extraLibs
 }
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation project(':Common')
     extraLibs project(':Common')
 }
 
